kleineres Refactoring